--- a/css/template.css
+++ b/css/template.css
@@ -611,7 +611,7 @@ section {
 .nino-testimonialSlider .quote {
 	font-size: 18px;
 	font-weight: 300;
-	font-style: italic;
+	font-family: 'Montserrat', sans-serif;
 	margin-bottom: 10px;
 	color:black;
 }
@@ -1621,8 +1621,8 @@ img.scaled {
 .MessageFromFounder
 {
 	font-size: 18px;
-	font-style: italic;
 	font-variant: normal;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 100;
 	line-height: 19px;
 	color:black;
@@ -1634,4 +1634,59 @@ img.scaled {
 	font-size: 18px;
 	color:black;
 	
+}
+
+table.minimalistBlack {
+  border: 2px solid #D5D5D2;
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+
+}
+table.minimalistBlack td, table.minimalistBlack th {
+  border: 1px solid #D5d5d2;
+  padding: 5px 4px;
+}
+table.minimalistBlack tbody td {
+  font-size: 15px;
+}
+table.minimalistBlack tr:nth-child(even) {
+  background: #F0F1F1;
+}
+table.minimalistBlack tfoot td {
+  font-size: 14px;
+}
+
+
+
+table.minimalistBlack2 {
+  background-color: #000000;
+  width: 100%;
+  height: 50px;
+  text-align: left;
+  border-collapse: collapse;
+}
+table.minimalistBlack2 td, table.minimalistBlack2 th {
+  border: 1px solid #D5D5D2;  
+}
+table.minimalistBlack2 tbody td {
+  font-size: 16px;
+  color: #FFFFFF;
+}
+table.minimalistBlack2 tr:nth-child(even) {
+  background: #F0F1F1;
+}
+table.minimalistBlack2 tfoot td {
+  font-size: 14px;
+  font-weight: 500;
+}
+table.minimalistBlack2 a
+{
+ color:white;
+}
+table.minimalistBlack2 a:hover
+{
+ cursor: pointer;
+ color:white;
+ font-weight: 700;
 }
