Directors Page update

--- a/css/template.css
+++ b/css/template.css
@@ -1629,6 +1629,17 @@ img.scaled {
 	padding-left: 15em;
 	padding-right: 15em;
 }
+.DirectorsText
+{
+	font-size: 18px;
+	font-variant: normal;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 100;
+	line-height: 19px;
+	color:black;
+	padding-left: 12em;
+	padding-right: 12em;
+}
 .committeeText
 {
 	font-size: 18px;
