--- a/css/template.css
+++ b/css/template.css
@@ -1643,6 +1643,13 @@ img.scaled {
 	color:black;
 	
 }
+.committeeTextIndent
+{
+	font-size: 18px;
+	color:#163639;
+	margin-left: 100px;
+	
+}
 
 table.minimalistBlack {
   border: 2px solid #D5D5D2;
