Press Photos Page Update

--- a/css/template.css
+++ b/css/template.css
@@ -1778,3 +1778,8 @@ table.minimalistBlack2 a:hover
 	line-height: 50px;
 	font-size: 28px;
 }
+
+.rotate90 {
+-webkit-transform:rotate(90deg); /* Chrome, Safari, Opera */
+transform:rotate(90deg); /* Standard syntax */
+}
