dammit missed this one

--- a/css/dimun.css
+++ b/css/dimun.css
@@ -409,7 +409,7 @@ td{
     width: 100%;
     min-height: 300px;
 
-    background: url(../img/Exec%20Photos/FinalDickhead) no-repeat center center;
+    background: url(../img/Exec%20Photos/FinalDickhead.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
