--- a/css/dimun.css
+++ b/css/dimun.css
@@ -204,7 +204,7 @@ html,body {
 
 .navbar {
     z-index: 9999;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: white;
     font-size: 1.2vw;
 }
 
