--- a/css/dimun.css
+++ b/css/dimun.css
@@ -203,7 +203,7 @@ html,body {
 
 
 .navbar {
-    z-index: 9999;
+    z-index: 999;
     background-color: white;
     font-size: 1.2vw;
 }
@@ -460,4 +460,34 @@ td{
 
 .resources img{
     width: 50%;
+}
+
+#warningback {
+    height: 100%;
+    width: 100%;
+    z-index: 999;
+    position: fixed;
+    background-color:  rgba(0, 0, 0, 0.75);
+}
+
+#warning {
+    border-radius: 25px;
+    position: relative;
+    z-index: 999999;
+    width: 50%;
+    height: 60vh;
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+    font-size: 20px;
+    transform: translateX(50%);
+    top: 15%;
+}
+
+#clos {
+    float: right;
+    color: white;
+    background-color:  rgba(0, 0, 0, 0);
+    border-style: none;
+    font-size: 30px;
 }
