--- a/css/dimun.css
+++ b/css/dimun.css
@@ -1,5 +1,23 @@
 @import url("https://use.typekit.net/gcm2lhi.css");
 
+::-webkit-scrollbar {
+    height: 5px;
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #333;
+}
+
 html,body {
     width: 100%;
     height: 100%;
